tests/codegen/fail/interface/struct/attr_implementers_duplicate_pretty.stderr
error: duplicated attribute argument found
 --> fail/interface/struct/attr_implementers_duplicate_pretty.rs:9:34
  |
9 | #[graphql_interface(for = [ObjA, ObjA])]
  |                                  ^^^^

error[E0412]: cannot find type `CharacterValue` in this scope
 --> fail/interface/struct/attr_implementers_duplicate_pretty.rs:4:18
  |
4 | #[graphql(impl = CharacterValue)]
  |                  ^^^^^^^^^^^^^^ not found in this scope

note: erroneous constant used
 --> fail/interface/struct/attr_implementers_duplicate_pretty.rs:3:10
  |
3 | #[derive(GraphQLObject)]
  |          ^^^^^^^^^^^^^
  |
  = note: this note originates in the macro `$crate::const_concat` which comes from the expansion of the derive macro `GraphQLObject` (in Nightly builds, run with -Z macro-backtrace for more info)

note: erroneous constant used
 --> fail/interface/struct/attr_implementers_duplicate_pretty.rs:3:10
  |
3 | #[derive(GraphQLObject)]
  |          ^^^^^^^^^^^^^
  |
  = note: this note originates in the macro `$crate::const_concat` which comes from the expansion of the derive macro `GraphQLObject` (in Nightly builds, run with -Z macro-backtrace for more info)

note: erroneous constant used
 --> fail/interface/struct/attr_implementers_duplicate_pretty.rs:3:10
  |
3 | #[derive(GraphQLObject)]
  |          ^^^^^^^^^^^^^
  |
  = note: this note originates in the macro `$crate::const_concat` which comes from the expansion of the derive macro `GraphQLObject` (in Nightly builds, run with -Z macro-backtrace for more info)

note: erroneous constant used
 --> fail/interface/struct/attr_implementers_duplicate_pretty.rs:3:10
  |
3 | #[derive(GraphQLObject)]
  |          ^^^^^^^^^^^^^
  |
  = note: this note originates in the macro `$crate::const_concat` which comes from the expansion of the derive macro `GraphQLObject` (in Nightly builds, run with -Z macro-backtrace for more info)
